Corrected the click on Light / dark mode in menu. Added dark light mode menu text entry in languages as token

--- a/src/modules/gamePlayer/styles/TimerControl.scss
+++ b/src/modules/gamePlayer/styles/TimerControl.scss
@@ -34,3 +34,10 @@
     }
 }
 
+
+body.lightMode {
+    .playButton {
+        background-color: linear-gradient(#F9EBC8, #FEFBE7);;
+    }    
+}
+
