--- a/src/modules/list/styles/ListItem.scss
+++ b/src/modules/list/styles/ListItem.scss
@@ -26,3 +26,10 @@
 .listContainer .listItemMenu {
     padding: 5px;
 }
+
+body.lightMode { 
+    .listItemMenu,
+    .listItemMenu.closed {
+        background-color: #A0BCC2;
+    }
+}
